--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     position: fixed;
     top: 0; left: 0; right: 0;
     z-index: 1000;
-    background: rgba(2, 6, 23, 0.8);
+    background: rgba(2, 6, 23, 0.9);
     backdrop-filter: blur(10px);
     border-bottom: 1px solid var(--glass-border);
     padding: 16px 0;
@@ -277,15 +277,41 @@
   /* Contact */
   .contact-box { text-align: center; max-width: 600px; margin: 0 auto; padding: 48px; background: linear-gradient(180deg, var(--glass) 0%, rgba(2,6,23,0) 100%); }
 
+  /* MOBILE SPECIFIC STYLES */
   @media (max-width: 900px) {
+    /* Layout Adjustments */
+    section { padding: 50px 0; }
     .hero-grid { grid-template-columns: 1fr; text-align: center; }
-    .hero-actions { justify-content: center; }
+    .hero-section { padding-top: 130px; }
     .hero-content p { margin: 0 auto 32px; }
-    .phone-mockup { margin-top: 40px; transform: none; }
+    .hero-actions { justify-content: center; }
+    
+    /* Navigation - Show as small buttons below logo */
+    .nav-wrapper { flex-direction: column; gap: 16px; }
+    nav { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; }
+    nav a { 
+        font-size: 13px; 
+        background: rgba(255,255,255,0.05); 
+        padding: 8px 16px; 
+        border-radius: 20px; 
+        border: 1px solid var(--glass-border);
+    }
+    nav .btn { display: none; } /* Hide the big contact button in nav on mobile */
+
+    /* Phone Mockup - Static & Non-Scrollable */
+    .phone-mockup { margin-top: 50px; transform: none; }
     .phone-mockup:hover { transform: none; }
-    .bento-grid, .roadmap-grid { grid-template-columns: 1fr; }
+    .phone-frame { margin: 0 auto; }
+    .app-screen { 
+        overflow: hidden; /* Prevent internal scrolling */
+        pointer-events: none; /* Disable clicking/scrolling inside phone */
+    }
+
+    /* Tighter Spacing */
+    .bento-grid, .roadmap-grid { grid-template-columns: 1fr; gap: 16px; }
     .bento-full { grid-column: span 1; }
-    nav { display: none; } /* Simplified for mobile */
+    .section-header { margin-bottom: 24px; }
+    .card { padding: 24px; }
   }
 </style>
 </head>
@@ -319,7 +345,7 @@
         <a href="https://docs.google.com/presentation/d/1PVDUJvIzEbf05DTWiGbctwbMiIWvva4poqGv_hdz6sw/edit?usp=sharing" class="btn btn-outline">View Pitch Deck</a>
       </div>
 
-      <div style="margin-top: 32px; display: flex; gap: 24px;">
+      <div style="margin-top: 32px; display: flex; gap: 24px; justify-content: center;">
         <div>
           <h4 style="font-size: 24px; color: var(--text-main)">MVP</h4>
           <span class="muted" style="font-size: 13px;">Ready for Beta</span>
