Updated Text Contents

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
       </div>
     <nav>
       <a href="#mission">Mission</a>
-      <a href="#revenue">Revenue</a>
+      <a href="#revenue">Business Model</a>
       <a href="#roadmap">Roadmap</a>
       <a href="#contact" class="btn btn-primary" style="padding: 8px 16px; font-size: 14px;">Contact</a>
     </nav>
@@ -507,8 +507,9 @@
         <h3>The Problem</h3>
         <p class="muted" style="margin-top:12px">
           The digital goods market in Bangladesh is currently the "Wild West." 
-          Trades happen in informal Facebook groups and WhatsApp chats. 
+          People are buying digital items through informal Social Media groups, third-party sellers and unverified channels. 
           The result? Constant scams, zero accountability, and honest sellers struggling to build a reputation.
+          Reselling an existing digital item is also difficult due to lack of a trusted and reliable platform.
         </p>
       </div>
 
@@ -533,7 +534,7 @@
           </div>
           <div style="display:flex; gap:12px; flex-wrap:wrap;">
             <span style="background:rgba(255,255,255,0.05); padding:8px 16px; border-radius:8px; font-size:14px;">Gamers</span>
-            <span style="background:rgba(255,255,255,0.05); padding:8px 16px; border-radius:8px; font-size:14px;">Content Creators</span>
+            <span style="background:rgba(255,255,255,0.05); padding:8px 16px; border-radius:8px; font-size:14px;">Creators</span>
             <span style="background:rgba(255,255,255,0.05); padding:8px 16px; border-radius:8px; font-size:14px;">Freelancers</span>
             <span style="background:rgba(255,255,255,0.05); padding:8px 16px; border-radius:8px; font-size:14px;">Digital Resellers</span>
           </div>
@@ -695,3 +696,4 @@
 
 </body>
 </html>
+
